kubernetes/apps/media/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - plex.local.elmurphy.com
  rules:
    - backendRefs:
        - name: plex
          port: 32400
